[metadata]
name = doublespike
version = 0.9.7
author = John F. Rudge
author_email = jfr23@cam.ac.uk
description = The double spike toolbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnrudge/pyspike
project_urls =
    Bug Tracker = https://github.com/johnrudge/pyspike/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    numpy
    scipy
    matplotlib

[options.packages.find]
where = src 

[options.package_data]
doublespike = data/*.csv
